i add orders part to adminpage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,8 @@ bot.token=6722797447:AAGqlPr7NDP5kPDWZrjwvrYleF3BrXacDms
 
 app.base-url=http://localhost:8080
 
+# Set logging level for your package
+logging.level.uz.pdp.salemartpro=DEBUG
+
+# Logging pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
