--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,10 @@
             <version>20240303</version> <!-- Latest version -->
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
